# remarkable-calibre-usb-device

./: .gitignore  .notebook.py  .pre-commit-config.yaml  README.md  __init__.py  _build.bat  _deploy.bat  _release.ps1  helpers.py  log_helper.py  not_sure.bat  not_sure.ps1  pyproject.toml  resync.py  rm_data.py  rm_facade.py  rm_settings.py  rm_ssh.py  rm_web_interface.py  rm_web_interface_dummy.py
.github/: FUNDING.yml
resync/: __main__.py  lib.py
